# api/docs/swagger.json
@@ -2028,10 +2028,6 @@
                     "format": "uuid",
                     "example": "4d0dbf0d-1034-42ef-8b6d-7eb3ceef99cf"
                 },
-                "createdAt": {
-                    "type": "string",
-                    "example": "2026-03-20T10:15:00Z"
-                },
                 "details": {
                     "type": "object"
                 },
@@ -2052,6 +2048,10 @@
                 "resourceType": {
                     "type": "string",
                     "example": "sandbox"
+                },
+                "timestamp": {
+                    "type": "string",
+                    "example": "2026-03-20T10:15:00Z"
                 },
                 "user": {
                     "$ref": "#/definitions/dto.UserSummary"
